# aus-persona

./: .dockerignore  .gitignore  AGENTS.md  AGENT_LOOP.md  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  workspace.yaml
Specs/: 01-dbt-census-source-ingestion.md  02-census-semantic-topic-layer.md  02-pgm-feature-marts.md  03-conditional-weighted-pgm-sampler.md  03-persona-worthy-sa2-topic-selection.md  04-first-pgm-feature-marts.md  06-narrative-persona-field-provenance.md  07-abs-g-table-coverage-promotion.md  08-data-designer-around-pgm.md  README.md
configs/: abs_census_sources.yml  abs_semantic_tables.yml
configs/data_designer/: persona_text_config.py
configs/orchestration/: dbt_jobs.yml
dagster_home/: dagster.yaml
dbt/aus_personas/: .user.yml  README.md  dbt_project.yml  profiles.yml.example  selectors.yml
docs/: README.md  abs-census-dictionary.md  abs-source-provenance.md  beads.md  common-pitfalls.md  dagster-orchestration.md  data-designer-persona-generation.md  persona-worthy-sa2-topics.md  rockbank-g01-findings.md  willoughby-hackathon-scope.md  willoughby-political-memory-layer.md
examples/seeds/: rockbank_pgm_seed_sample.csv  rockbank_seed_sample.csv
src/aus_personas/: __init__.py  abs_metadata.py  cli.py  dbt_config.py  persona_fields.py  sample_sizes.py
tests/: test_abs_metadata.py  test_dbt_config.py  test_orchestration_dbt_jobs.py  test_persona_generation_provenance.py  test_pgm_marts.py  test_political_memory_layer.py  test_sample_sizes.py  test_semantic_catalog.py  test_weighted_sampler.py
(+65 files in other folders)
